<package format="2">
  <name>fcl_catkin</name>
  <version>0.5.94</version>
  <description>fcl_catkin</description>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>libccd-dev</depend>
  <depend>eigen</depend>
  <depend>octomap</depend>
</package>
